use docker container repo for this one

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
       - name: app
         tty: true
-        image: ghcr.io/dcaulton/detection3:latest
+        image: dcaulton/detection3:latest
         imagePullPolicy: Always
         env:
           - name: MQTT_BROKER
